    (Nikita)
  . Fixed bug #73528 (Crash in zif_mb_send_mail). (Nikita)
  . Fixed bug #74929 (mbstring functions version 7.1.1 are slow compared to 5.3
    on Windows). (Nikita)

- ODBC:
  . Removed support for ODBCRouter. (Kalle)
  . Removed support for Birdstep. (Kalle)

- OpenSSL:
  . Fixed bug #75307 (Wrong reflection for openssl_open function). (villfa)

- PDO_DBlib:
  . Implemented request #69592 (allow 0-column rowsets to be skipped
    automatically). (fandrieu)
  . Fixed bug #74243 (allow locales.conf to drive datetime format). (fandrieu)

- PDO_OCI:
  . Fixed bug #74631 (PDO_PCO with PHP-FPM: OCI environment initialized
    before PHP-FPM sets it up). (Ingmar Runge)

- PDO SQLite
  . Add support for additional open flags

- phar:
  . Fixed bug #74991 (include_path has a 4096 char limit in some cases).
    (bwbroersma)

- pgsql:
  . Added new error constants for pg_result_error(): (Kalle)
    - Requires Postgres 9.3
      - PGSQL_DIAG_SCHEMA_NAME
	  - PGSQL_DIAG_TABLE_NAME
	  - PGSQL_DIAG_COLUMN_NAME
	  - PGSQL_DIAG_DATATYPE_NAME
	  - PGSQL_DIAG_CONSTRAINT_NAME
	- Requires Postgres 9.6
	  - PGSQL_DIAG_SEVERITY_NONLOCALIZED

- Session:
  . Fixed bug #74941 (session fails to start after having headers sent). 
    (morozov)

- SOAP:
  . Fixed bug #75464 (Wrong reflection on SoapClient::__setSoapHeaders). (villfa)

- SPL:
  . Fixed bug #74977 (Appending AppendIterator leads to segfault). 
    (Andrew Nester)
  . Fixed bug #75173 (incorrect behavior of AppendIterator::append in foreach loop).
    (jhdxr)

- SQLite3:
  . Updated bundled libsqlite to 3.21.0. (cmb)

- Standard:
  . Fixed unzserialize(), to disable creation of unsupported data structures
    through manually crafted strings. (Dmitry)

- Testing:
  . Implemented request #62055 (Make run-tests.php support --CGI-- sections).
    (cmb)

- Zlib:
  . Added zlib/level context option for compress.zlib wrapper. (Sara)

<<< NOTE: Insert NEWS from last stable release here prior to actual release! >>>