@@ -157,6 +157,7 @@ enum {
 	PDO_DBLIB_ATTR_QUERY_TIMEOUT,
 	PDO_DBLIB_ATTR_STRINGIFY_UNIQUEIDENTIFIER,
 	PDO_DBLIB_ATTR_VERSION,
+	PDO_DBLIB_ATTR_TDS_VERSION,
 	PDO_DBLIB_ATTR_SKIP_EMPTY_ROWSETS,
 	PDO_DBLIB_ATTR_DATETIME_CONVERT,
 };
